# cargo-workspace-deps

./: CHANGELOG.md  Cargo.toml  README.md
.github/: FUNDING.yml
.github/workflows/: ci.yml  release-plz.yml
src/: dependency.rs  error.rs  lib.rs  main.rs  output_format.rs  toml_editor.rs  version_resolver.rs  workspace.rs
tests/: README.md  create_test.sh  diff_fixture.sh  test_check.rs  test_cross_section_conflict.rs  test_default.rs  test_default_features_conflict.rs  test_empty.rs  test_exclude.rs  test_exclude_members.rs  test_fix_orphans.rs  test_format_preservation.rs  test_git_deps.rs  test_helpers.rs  test_idempotency.rs  test_min_members.rs  test_mixed_optional.rs  test_mixed_sections.rs  test_optional_features.rs  test_output_format.rs  test_partial_workspace.rs  test_path_deps.rs  test_platform_deps.rs  test_renamed_deps.rs  test_section_flags.rs  test_version_conflict.rs  test_version_resolution.rs
tests/fixtures/test_cross_section_conflict/after/: Cargo.toml
tests/fixtures/test_cross_section_conflict/before/: Cargo.toml
tests/fixtures/test_default/after/: Cargo.toml
tests/fixtures/test_exclude/after/: Cargo.toml
tests/fixtures/test_exclude_members/after/: Cargo.toml
tests/fixtures/test_exclude_members/before/: Cargo.toml
tests/fixtures/test_features/after/: Cargo.toml
tests/fixtures/test_format_preservation/after/: Cargo.toml
tests/fixtures/test_format_preservation/before/: Cargo.toml
tests/fixtures/test_min_members/after/: Cargo.toml
tests/fixtures/test_min_members/before/: Cargo.toml
tests/fixtures/test_mixed_optional/after/: Cargo.toml
tests/fixtures/test_mixed_sections/after/: Cargo.toml
tests/fixtures/test_output_comprehensive/after/: Cargo.toml
tests/fixtures/test_output_comprehensive/after/member1/: Cargo.toml
tests/fixtures/test_output_comprehensive/after/member2/: Cargo.toml
tests/fixtures/test_output_comprehensive/after/member3/: Cargo.toml
tests/fixtures/test_output_comprehensive/before/: Cargo.toml
tests/fixtures/test_partial_workspace/after/: Cargo.toml
tests/fixtures/test_platform_deps/after/: Cargo.toml
tests/fixtures/test_renamed_deps/after/: Cargo.toml
tests/fixtures/test_section_flags/after_no_build_dependencies/: Cargo.toml
tests/fixtures/test_section_flags/after_no_dependencies/: Cargo.toml
tests/fixtures/test_section_flags/after_no_dev_dependencies/: Cargo.toml
tests/fixtures/test_single_member/after/: Cargo.toml
tests/fixtures/test_version_resolution/after/: Cargo.toml
tests/fixtures/test_version_resolution/after_highest_compatible/: Cargo.toml
(+94 files in other folders)
