[package]
name = "cargo-workspace-deps"
version = "0.1.0"
edition = "2024"

[workspace]
exclude = ["tests/fixtures"]

[[bin]]
name = "cargo-workspace-deps"
path = "src/main.rs"

[dependencies]
cargo_metadata = "0.23"
toml_edit = "0.24"
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
glob = "0.3"
semver = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
tempfile = "3.24"
rstest = "0.26"
