[workspace]
members = ["member1", "member2", "member3"]
resolver = "2"

[workspace.dependencies]
# These are unused by any member
tempfile = "3.0"
regex = "1.10"
anyhow = "1.0.80"
lazy_static = "1.5.0"
serde = "1.0"

[workspace.dev-dependencies]
rstest = "0.23"

[workspace.build-dependencies]
bindgen = "0.70.0"
